force-app/main/default/objects/CampaignMember/fields/of_Edu_Attendees__c.field-meta.xml
<CustomField>
    <fullName>of_Edu_Attendees__c</fullName>
    <formula>of_Students__c +  of_Teachers__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># of Edu Attendees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>