force-app/main/default/objects/CampaignMember/fields/of_Hours__c.field-meta.xml
<CustomField>
    <fullName>of_Hours__c</fullName>
    <label># of Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>