force-app/main/default/objects/CampaignMember/fields/of_Students__c.field-meta.xml
<CustomField>
    <fullName>of_Students__c</fullName>
    <label># of Students</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>