force-app/main/default/objects/CampaignMember/fields/of_Teachers__c.field-meta.xml
<CustomField>
    <fullName>of_Teachers__c</fullName>
    <label># of Teachers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>